--- a/LexiExtract/LexiExtract.csproj
+++ b/LexiExtract/LexiExtract.csproj
@@ -20,13 +20,14 @@
 		<PackageLicenseExpression> Apache-2.0</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<PackageProjectUrl>https://github.com/eymenefealtun/LexiExtract</PackageProjectUrl>
+		<Version>1.1.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="..\..\..\..\Desktop\LexiExtractMainIcon.png">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
+	  <None Include="..\RepoResources\LexiExtractMainIcon.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 
 </Project>
