--- a/LexiExtract/LexiExtract.csproj
+++ b/LexiExtract/LexiExtract.csproj
@@ -20,10 +20,15 @@
 		<PackageLicenseExpression> Apache-2.0</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<PackageProjectUrl>https://github.com/eymenefealtun/LexiExtract</PackageProjectUrl>
-		<Version>3.0.0</Version>
+		<Version>4.0.0</Version>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Include="..\README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	  <None Include="..\RepoResources\LexiExtractMainIcon.png">
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
